lib/tests/fixtures/compiler/parser/break_in_resource_override.baseline
Error: break_in_resource_override.pp:3:26: break statement cannot be used inside a resource override expression.
  bar => if true { break }
                   ^~~~~
