lib/tests/fixtures/compiler/parser/break_in_resource_override.pp
[].each |$x| {
    File[foo] {
        bar => if true { break }
    }
}
